syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.william";
option java_outer_classname = "ChavePixOuterClassName";


package com.william;

service ChavePixServiceRegistra {
  rpc registra(CadastraChavePixRequest) returns (CadastraChavePixResponse) {}

}

service ChavePixServiceRemove {
  rpc remove(RemoveChavePixRequest)returns (EmptyReturn) {}

}

service  ChavePixServiceConsulta {
  rpc consulta(ConsultaChavePixRequest) returns (ConsultaChavePixResponse) {}
}

service  ChavePixServiceListaChavesCliente {
  rpc listaChavesCliente(ListaChavesClienteRequest) returns (ListaChavesClienteResponse) {}
}


enum TipoDaChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoDaConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message CadastraChavePixRequest {
  string idCliente = 1;
  TipoDaChave tipoDaChave = 2;
  string valorChave = 3;
  TipoDaConta tipoDaConta = 4;

}

message CadastraChavePixResponse {
  string pixId = 1;
  string clienteId = 2;

}

message RemoveChavePixRequest{
  string pixId = 1;
  string clienteId = 2;
}
message EmptyReturn{}

message ConsultaChavePixRequest{
  message ConsultaPorPixId{
    string clienteId = 1;
    string pixId = 2;
  }

  oneof opcaoConsulta {
    ConsultaPorPixId pixIdRequest = 1;
    string chave = 2;

  }
}

message ConsultaChavePixResponse{
  TipoDaChave tipoChave = 1;
  string valorChave = 2;
  DadosConta dadosConta = 3;
  DadosPessoais dadosPessoais = 4;
  string criadoEm = 5;
  string idCliente = 6;
  string pixId = 7;
}


message DadosConta{
  string nomeInstituicao = 1;
  string agencia = 2;
  string numeroConta = 3;
  TipoDaConta tipoConta = 4;

}

message DadosPessoais{
  string nome = 1;
  string cpf = 2 ;

}

message ListaChavesClienteRequest{
  string clienteId = 1;

}

message ListaChavesClienteResponse{
  string clienteId  = 1;
  repeated ChaveClienteLista listaChaves = 2;

  message ChaveClienteLista {
    string pixId = 1;
    TipoDaChave tipoDaChave = 2;
    string valorChave = 3;
    TipoDaConta tipoDaConta = 4;
    string dataCriacao = 5;

  }
}
